fix(index): update header title to reflect bakery focus

--- a/templates/index_page/index.html.twig
+++ b/templates/index_page/index.html.twig
@@ -137,7 +137,7 @@
   {# ------------------------------------------------ #}
 
   <div class="w-full py-24 bg-[#FFFFFF]">
-    <h1 class="text-5xl text-center font-playfair">Qui sommes nous ?</h1>
+    <h1 class="text-5xl text-center font-playfair">Nos Boulangeries</h1>
     <p class="text-lg mt-1 text-center">Découvrez nos partenaires locaux pour une livraison de qualité à domicile</p>
 
     <div class="mt-8 flex flex-wrap justify-center gap-2 md:gap-4">
