feat(index): update section for bakeries with new ID and adjust navbar link

--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -1,5 +1,5 @@
 {% set links = [
-  { 'name': 'Nos boutiques', 'url': '/all' },
+  { 'name': 'Nos boulangeries', 'url': '/#bakeries' },
   { 'name': 'Catégories', 'url': '/categories' }
 ] %}
 
