--- a/templates/index_page/index.html.twig
+++ b/templates/index_page/index.html.twig
@@ -77,7 +77,7 @@
     </div>
   </div>
 
-  <div class="w-full py-24">
+  <section id="bakeries" class="w-full py-24">
     <h1 class="text-5xl text-center font-playfair">Nos Boulangeries</h1>
     <p class="text-lg mt-1 text-center">Découvrez nos partenaires locaux pour une livraison de qualité à domicile</p>
 
@@ -106,7 +106,7 @@
       {% endif %}
 
     </div>
-  </div>
+  </section>
 
   {# ------------------------------------------------ #}
 
