--- a/templates/index_page/index.html.twig
+++ b/templates/index_page/index.html.twig
@@ -3,9 +3,9 @@
 {% block body %}
   <div class="w-full relative">
     <img
-        src="{{ asset('images/header-background.jpg') }}"
+        src="{{ asset('images/header-background.png') }}"
         alt="Header Background"
-        class="w-full h-auto object-cover min-h-40 max-h-screen"
+        class="w-full h-auto object-cover min-h-64 max-h-screen"
     />
 
     <div class="absolute top-0 left-0 w-full h-full flex flex-col items-center justify-center bg-black/30">
