feat(index): update header background image filename for consistency

--- a/templates/index_page/index.html.twig
+++ b/templates/index_page/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
   <div class="w-full relative">
     <img
-        src="{{ asset('images/header-background.png') }}"
+        src="{{ asset('images/Background.png') }}"
         alt="Header Background"
         class="w-full h-auto object-cover min-h-64 max-h-screen"
     />
