--- a/templates/product_page/index.html.twig
+++ b/templates/product_page/index.html.twig
@@ -43,7 +43,7 @@
     </div>
 
     <div class="text-center mb-6">
-      <h1 class="text-4xl font-playfair">{{ product.name }} · {{ product.price|number_format(2, '.', ',') }}€</h1>
+      <h1 class="text-4xl font-playfair">{{ product.name }} · {{ product.price|number_format(2, ',', ',') }}€</h1>
       <p class="mt-4 mb-6 mx-auto max-w-md text-center">{{ product.description }}</p>
 
       <div class="flex flex-col items-center mb-8">
